k8s/infra/network/gateway/gw-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      ip-pool: default
      advertise: bgp
  addresses:
    - type: IPAddress
      value: 172.20.10.110
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.stonegarden.dev"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-stonegarden
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: stonegarden.dev
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-stonegarden
      allowedRoutes:
        namespaces:
          from: All
