k8s/infra/network/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      bgp.cilium.io/advertise-service: default
      bgp.cilium.io/ip-pool: default
  addresses:
    - type: IPAddress
      value: 172.20.10.100
  listeners:
    - protocol: TLS
      port: 443
      name: proxmox-passthrough
      hostname: proxmox.stonegarden.dev
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TLS
      port: 443
      name: truenas-passthrough
      hostname: truenas.stonegarden.dev
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.stonegarden.dev"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-stonegarden
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: stonegarden.dev
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-stonegarden
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: s9n-no
      hostname: s9n.no
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-s9n-no
      allowedRoutes:
        namespaces:
          from: All
